# VulkanEngine

./: .gitignore  CMakeLists.txt  README.md  VulkanEngine.sln  prepare_deps.py
VulkanEngine/: CMakeLists.txt  VulkanEngine.vcxproj  VulkanEngine.vcxproj.filters
VulkanEngine/include/: Engine.hpp  PCH.hpp  Renderer.hpp  Time.hpp  Types.hpp  Window.hpp
VulkanEngine/shaders/: vert.spv
VulkanEngine/src/: Engine.cpp  Renderer.cpp  VulkanWrappers.cpp  Window.cpp  main.cpp
include/: Asset.hpp  AssetStore.hpp  Buffer.hpp  CMakeLists.txt  Camera.hpp  Clock.hpp  CombineOverlaysShader.hpp  CommonJobs.hpp  Console.hpp  Engine.hpp  EngineConfig.cpp  EngineConfig.hpp  Event.hpp  File.hpp  Filesystem.hpp  Font.hpp  GBufferShader.hpp  Image.hpp  Keyboard.hpp  Lights.hpp  Material.hpp  Model.hpp  Mouse.hpp  OverlayElement.hpp  OverlayRenderer.hpp  OverlayShader.hpp  PBRImage.hpp  PBRShader.hpp  PCH.hpp  PhysicsObject.hpp  PhysicsWorld.hpp  Pipeline.hpp  PointShadowShader.hpp  Polygon.hpp  Profiler.hpp  Rect.hpp  Renderer.hpp  ScreenShader.hpp  Scripting.hpp  Shader.hpp  (+19 more)
res/: consolefontresource.xml  resources.txt  resources.xml
res/models/: ballphysics.xml  box.dae  boxphysics.xml  groundphysics.xml  hollowboxphysics.xml
res/models/pillar/: pillar.glb
res/scripts/: config.chai  script.chai  startup.chai
res/shaders/: combineOverlays.glsl  combineScene.glsl  gbuffer.glsl  gbufferNoTex.glsl  overlay.glsl  pbr.glsl  pointShadow.glsl  screen.glsl  spotShadow.glsl  square.glsl  ssao.glsl  ssaoBlur.glsl  sunShadow.glsl  text.glsl
shaders/: frag.spv  square.glsl  vert.spv  vert.vert
src/: Asset.cpp  AssetStore.cpp  Buffer.cpp  CMakeLists.txt  Camera.cpp  Console.cpp  Engine.cpp  EngineConfig.cpp  File.cpp  Font.cpp  GBufferPipeline.cpp  GBufferPipelineNoTexture.cpp  Image.cpp  Keyboard.cpp  Lights.cpp  Material.cpp  Model.cpp  Mouse.cpp  OverlayElement.cpp  OverlayPipeline.cpp  OverlayRenderer.cpp  PBRImage.cpp  PBRPipeline.cpp  PhysicsObject.cpp  PhysicsWorld.cpp  Pipeline.cpp  Polygon.cpp  Profiler.cpp  Renderer.cpp  SSAOPipeline.cpp  ScreenPipeline.cpp  Scripting.cpp  Shader.cpp  ShadowPipeline.cpp  Text.cpp  Texture.cpp  Threading.cpp  UIElement.cpp  UIElementGroup.cpp  UIPolygon.cpp  (+6 more)
